# Encoder-Only-Transformer

./: .gitignore  CHANGELOG.md  DECISIONS.md  GUIDE.md  PROJECT_CONTEXT.md  README.md  TASKS.md  doc.md  pyproject.toml
aciklamalar/: aciklamalar.md
config/: default.yaml
experiments/: train_sequence_classification.py
src/encoder_only_transformer/: __init__.py
src/encoder_only_transformer/blocks/: encoder_block.py
src/encoder_only_transformer/blocks/explanations/: encoder_block.md
src/encoder_only_transformer/config/: __init__.py  config.py
src/encoder_only_transformer/data/: __init__.py  datasets.py
src/encoder_only_transformer/data/explanations/: datasets.md
src/encoder_only_transformer/factories/: factories.py
src/encoder_only_transformer/layers/: attention.py  embeddings.py  feed_forward.py  pooling.py
src/encoder_only_transformer/layers/explanations/: attention.md  embeddings.md  feed_forward.md
src/encoder_only_transformer/models/: encoder.py  heads.py  model.py
src/encoder_only_transformer/training/: metrics.py  trainer.py
tests/: test_config.py  test_datasets.py  test_embeddings.py  test_encoder.py  test_encoder_block.py  test_factories.py  test_feed_forward.py  test_heads.py  test_metrics.py  test_model.py  test_package_exports.py  test_pooling.py  test_self_attention.py  test_trainer.py
tests/explanations/: test_embeddings.md  test_feed_forward.md  test_self_attention.md
